--- a/Galeria/galeria.html
+++ b/Galeria/galeria.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         
-        <script src="funciones.js"></script>
+        <script src="galeria.js"></script>
         
         <meta charset="utf-8"/>
         <style>
