--- a/Validaciones/validacion.html
+++ b/Validaciones/validacion.html
@@ -1,73 +1,56 @@
 <!DOCTYPE html>
-<html>
-<head>
- <meta charset="UTF-8">
- <script type="text/javascript" src="validacion.js"></script>
- <link href="estilo.css" rel="stylesheet" type="text/css">
+<html lang="es">
 
+ <head>
+  <meta charset="utf-8">
+  <title>Formulario</title>
+  <link rel="stylesheet" type="text/css" href="estiloFormulario.css" media="screen" >
+  <script language="JavaScript" type="text/javascript" src="validacion.js" ></script>
 
-</head>
-<body>
-        <header>
-            </header>
-            <br>
+  
+ </head>
+ 
+ <body>
+	<!----<div id="fondo"> -->
+			<section class="group">
+		<form action="pagina.php" method="POST" id="formulario" name="formulario" >
 
-<section class="group">
-<form id="formulario01" name="formulario01" method="POST" action="" onsubmit="return validaTodo(event)"   atribute action="pagina.php"  >
-    <h2><em>Formulario de Registro</em></h2>
+			<h2><em>Formulario de Registro</em></h2>
 
- <label for="cedula">Cedula (*)</label>
- <input type="text" id="cedula" class="form-input" name="cedula" value="" placeholder="Ingrese el número de cedula ..."
- onkeyup="validaCedula(event)" />
-<span id="mensajeCedula" ></span>
+			<label>Cedula:</label>
+			<input type="texto" id="cedula" name="cedula" value=""  onblur="validarCedula();" placeholder="Ingrese la cedula">*&nbsp; &nbsp;<label id="salida"> </label>
+			<br>
+			
+			<label>Nombres:</label>
+			<input type="texto" id="nombre" name="nombre" value=""  onblur="validarSoloLetras();" placeholder="Ingrese sus dos nombres">*&nbsp; &nbsp;<label id="salida1"></label><br>
+			
+			<label>Apellidos:</label>
+			<input type="texto" id="apellido" name="apellido" value="" onblur="validarSoloLetras1();" placeholder="Ingrese sus dos apellidos">*&nbsp; &nbsp;<label id="salida2"></label><br>
+			
+			<label>Telefono:</label>
+			<input type="texto" id="telefono" name="telefono" value="" onblur="validarSoloNumero();"placeholder="Ingrese su telefono">*&nbsp; &nbsp;<label id="salida3"></label><br>
 
- <br>
- <label for="nombres">Nombres (*)</label>
- <input type="text" id="nombres" class="form-input" name="nombres" value="" placeholder="Ingrese sus dos nombres
-..."  onkeyup="validarNumeros(event)" />
-<span id="mensajeNombres" ></span>
-
- <br>
- <label for="apellidos">Apelidos (*)</label>
- <input type="text" id="apellidos" class="form-input"  name="apellidos" value="" placeholder="Ingrese sus dos apellidos
-..."  onkeyup="validarNumeros1(event)" />
-<span id="mensajeApellidos"  ></span>
-
- <br>
- <label for="direccion">Dirección (*)</label>
- <input type="text" id="direccion" class="form-input" name="direccion" value="" placeholder="Ingrese su dirección ..."
-/>
-<span id="mensajeDireccion"  ></span>
-
- <br>
- <label for="telefono">Teléfono (*)</label>
- <input type="text" id="telefono" class="form-input"  name="telefono" value="" placeholder="Ingrese su número telefónico
-..."     onkeyup="validarLetras1(event)"/>
-<span id="mensajeTelefono"  ></span>
-
- <br>
- <label for="fecha">Fecha Nacimiento (*)</label>
- <input type="text" id="fechaNacimiento" class="form-input"  name="fechaNacimiento" value="" placeholder="Ingrese su
-fecha de nacimiento ..."  />
-<span id="mensajeFecha"  ></span>
-
- <br>
- <label for="correo">Correo electrónico (*)</label>
- <input type="text" id="correo" class="form-input" name="correo" value="" placeholder="Ingrese su correo electrónico
-..."  onkeyup="validar_correo(event)"  />
-<span id="mensajeCorreo" ></span>
-
- <br>
- <label for="contrasena">Contraseña (*)</label>
- <input type="password" id="contrasena" class="form-input" name="contrasena" value="" placeholder="Ingrese su
-contraseña ..." />
-<span id="mensajeContrasena"  ></span>
-
- <br>
- <input type="submit" id="crear" name="crear" onclick="return validaTodo();"    value="Aceptar" />
- <input type="button" value="Mostrar Imagenes" onclick="window.location.href='galeria.html';">
- <input type="reset" id="cancelar" name="cancelar" value="Cancelar" />
- </form>
-</section>
-</body>
-</html>
+			<label for="fecha">Fecha Nacimiento </label>
+			<input type="text" id="fechaNacimiento" class="form-input"  name="fechaNacimiento" value="" placeholder="Ingrese su fecha de nacimiento" />*<br>
+			
+			<label>Dirección:</label>
+			<input type="texto" id="direccion" name="direccion" value="" placeholder="Ingrese su direccion">*<br>
+			
+			<label>Correo:</label>
+			<input type="texto" id="correo" name="correo" value="" onblur="validarCorreo();" placeholder="Ingrese su correo electronico">*&nbsp; &nbsp;<label id="salida4"></label><br>
+		
+			
+			<input type="submit" id="enviar" value="Eviar" name="boton1" onclick="return validarCamposObli(this);" href='pagina.php'/>
+    	<!--  <input type="submit" id="enviar" value="Enviar" name="boton1"/>  -->
+		<!--	 <input type="button" id="cancelar" value="Cancelar" />  -->
+			 <input type="reset" id="cancelar" name="cancelar" value="Cancelar" />
+			
+			
+			<div id="mensaje"></div>
+			
+		</form>
+	</section>
+	<!-- </div> --> 	
+	
+ </body>
+ </html>
